CSS adjustments. 1. removed fixed horizontal spacing. 2. set vertical spacing on open to auto.

--- a/accordion/src/accordion.css
+++ b/accordion/src/accordion.css
@@ -20,7 +20,7 @@ body {
 
 .accordion {
    -webkit-box-shadow: 0px 13px 23px -13px rgba(0,0,0,0.5);
-   width: 420px;
+   width: 100%;
    background-color: transparent;
    margin: auto;
    margin-top: 50px;
@@ -28,7 +28,7 @@ body {
 
 .title {
   height: 30px;
-  width: 400px;
+  /* width: 400px; */
   background-color: rgba(0,0,0, .4);
   color: #ffddcc;
   text-transform: uppercase;
@@ -59,7 +59,7 @@ body {
 
 .content {
   height: 30px;
-  width: 420px;
+  /* width: 100%; */
   background-color: transparent;
   border-radius: 4px;
   color: white;
@@ -69,12 +69,12 @@ body {
   z-index: 1000;
   margin-top: -30px;
   text-align: left;
-  transition: all 200ms cubic-bezier(0.600, -0.280, 0.735, 0.045);
+  transition: all 200ms cubic-bezier(0.600, -0.280, 0.735, 0.045) ;
 }
 
 .content-open {
   margin-top: 0px;
-  height: 200px;
+  height: auto;
   background-color: rgba(0,0,0, .1);
   transition: all 350ms cubic-bezier(0.080, 1.090, 0.320, 1.275);
 }
@@ -84,7 +84,7 @@ body {
   visibility: hidden;
   opacity: 0;
   overflow: auto;
-  transition: all .2s ease-in;
+  transition: all .1s ease-in;
 }
 
 .content-text-open {
